--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "name": "staark/user",
     "description": "PHP User Manage System v2",
     "require": {
-        "php": ">=7.4",
+        "php": ">=7.4"
     }
 }
