--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,20 @@
 {
     "name": "staark/user",
+    "version": "1.0.0-dev",
     "description": "PHP User Manage System v2",
+    "license": "MIT",
+    "homepage": "https://github.com/Staark94/",
+    "type": "library",
+    "authors": [
+        {
+            "name": "Costin Ionut",
+            "email": "ionuzcostin@gmail.com",
+            "homepage": "https://staark94.github.io/home/",
+            "role": "Developer"
+        }
+    ]
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "ext-mbstring": "*"
     }
 }
