--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "staark/user",
-    "version": "1.0.0-dev",
+    "version": "v1.2",
     "stable": "1.0.2",
     "description": "PHP User Manage System v2",
     "license": "MIT",
