--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "staark/user",
-    "version": "v1.2",
-    "stable": "1.0.2",
+    "version": "v1.2-stable",
     "description": "PHP User Manage System v2",
     "license": "MIT",
     "homepage": "https://github.com/Staark94/",
